objects/Unit_of_Measure__c/fields/Container_Size__c.field-meta.xml
<CustomField>
    <fullName>Container_Size__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Container Size</label>
    <type>Checkbox</type>
</CustomField>