objects/Unit_of_Measure__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>External ID	Set this field as the unique record identifier from an external system</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>