objects/Unit_of_Measure__c/fields/Hours_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Hours_Conversion__c</fullName>
    <label>Hours Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>