objects/Unit_of_Measure__c/fields/Hours_UOM__c.field-meta.xml
<CustomField>
    <fullName>Hours_UOM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hours UOM</label>
    <type>Checkbox</type>
</CustomField>