objects/Unit_of_Measure__c/fields/Weight_Volume__c.field-meta.xml
<CustomField>
    <fullName>Weight_Volume__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weight/Volume</label>
    <type>Checkbox</type>
</CustomField>