objects/Unit_of_Measure__c/validationRules/Prevent_Duplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Duplicate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(VLOOKUP($ObjectType.Unit_of_Measure__c.Fields.Name, $ObjectType.Unit_of_Measure__c.Fields.Name, Name) = Name, OR(ISNEW(), ISCHANGED(Name)))</errorConditionFormula>
    <errorMessage>Duplicate record found!</errorMessage>
</ValidationRule>