objects/Unit_of_Measure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hours_UOM__c</columns>
    <columns>Weight_Volume__c</columns>
    <columns>Container_Size__c</columns>
    <columns>Blocked__c</columns>
    <columns>CSID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>